snap-server/src/main/antlr/Pregex.g4
grammar Pregex;

@header{
package com.kyc.snap.antlr;
}

fragment CHAR : [*.A-Za-z];
fragment DIGIT : [0-9];

SYMBOL : CHAR;
COUNT : DIGIT+;

term
  : SYMBOL              #Symbol
  | '<' terms '>'       #Anagram
  | '[' terms ']'       #Choice
  | term '{' COUNT '}'  #Count
  | term '~' term       #Interleave
  | '(' terms ')'       #List
  | term '?'            #Maybe
  | term '+'            #OneOrMore
  | term '|' term       #Or
  | '"' terms '"'       #Quote
  ;
terms : term+;
